fixed overflow issue and improved top margin

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ footer{
 .container{
     margin-left:auto;
     margin-right:auto;
-    margin-top:3em;
+    margin-top:5em;
     padding:1em;
     background-color: black;
     border-style: solid;
@@ -31,7 +31,7 @@ footer{
     margin-left:auto;
     margin-right:auto;
     margin-bottom:32px;
-    padding:28px;
+    padding-top:1em;
     border-style: solid;
     border-color:black;
     background-color:black;
